# inertia-django-example

./: .env.example  .gitignore  README.md  compose.yml  pyproject.toml
config/: settings.py  urls.py
polls/: views.py
polls/migrations/: 0001_initial.py
templates/: base.html
web/: package-lock.json  package.json  vite.config.ts
web/src/: main.jsx
web/src/Layouts/: DefaultLayout.jsx
web/src/Pages/Polls/: Detail.jsx  Index.jsx  Results.jsx
